@@ -5,10 +5,14 @@ Add protocol action "Get Server Info"
  - server versioning
  - connected since ...
 
-Feature detection in Aware Service
- - display in buddy info
-
 Conditional compilation
  - buddy search feature and dialogue
    --enable-search
+
+File Transfer
+ - sending files
+
+Conversations
+ - sending MIME w/ images
+ - fragment large messages (maybe)
 
